# meetscribe

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  LICENSE  README.md  TEST_COVERAGE_ANALYSIS.md  config.example.yaml  docker-compose.yml  pyproject.toml  servers.example.yaml
.github/workflows/: ci.yml  docker.yml
docs/: roadmap.md
nginx/: nginx.conf
src/meetscribe/: __init__.py  cli.py  config.py  database.py  errors.py  log.py  migration.py  servers.py  team.py
src/meetscribe/migrations/: 001_initial.sql  002_transcript_segments.sql  003_track_open_space.sql
src/meetscribe/pipeline/: __init__.py  audio.py  clustering.py  diarization.py  embeddings.py  identification.py  models.py  transcriber.py  transcription.py  vad.py
src/meetscribe/web/: __init__.py  app.py  deps.py  models.py
src/meetscribe/web/routes/: auth.py  samples.py  session.py  speakers.py  tasks.py  tracks.py
src/meetscribe/web/services/: auth.py  pipeline.py  session.py
src/meetscribe/web/static/js/: app.js
src/meetscribe/web/templates/: base.html  base_auth.html  index.html  login.html  register.html  session_not_found.html
src/meetscribe/web/templates/partials/: samples_grid.html  tailwind_config.html
src/meetscribe/web/templates/steps/: step1_upload.html  step2_config.html  step3_extract.html  step4_samples.html  step5_enroll.html  step6_transcribe.html
tests/: conftest.py  conftest_web.py  test_audio.py  test_clustering.py  test_config.py  test_database.py  test_embeddings_extractor.py  test_identification.py  test_models.py  test_pipeline_integration.py  test_sample_collection.py  test_session.py  test_team.py  test_transcriber.py  test_vad.py  test_web_app.py  test_web_deps.py  test_web_routes_auth.py  test_web_routes_samples.py  test_web_routes_session.py  test_web_routes_speakers.py  test_web_routes_tasks.py  test_web_routes_tracks.py
tests/core/: test_cli_first_run.py  test_config.py  test_database.py  test_db_threading.py  test_log.py  test_team.py
tests/pipeline/: test_audio.py  test_embeddings.py  test_identification.py  test_integration.py  test_models.py  test_sample_collection.py  test_transcriber.py  test_vad.py
tests/web/: conftest.py  test_app.py  test_auth_service.py  test_deps.py  test_pipeline.py  test_routes_auth.py  test_routes_samples.py  test_routes_session.py  test_routes_speakers.py  test_routes_tasks.py  test_routes_tracks.py  test_session_service.py  test_task_registry.py
