[project]
name = "meetscribe"
version = "0.2.0"
description = "Meeting transcription with speaker diarization using remote speaches API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Egor Korobov" }
]
keywords = [
    "transcription",
    "diarization",
    "speaker-recognition",
    "meeting",
    "audio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx",
    "pyyaml",
    "tqdm",
    "colorama",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/korobov/meetscribe"
Repository = "https://github.com/korobov/meetscribe"
Issues = "https://github.com/korobov/meetscribe/issues"

[project.scripts]
meetscribe = "meetscribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meetscribe"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
