[project]
name = "meetscribe"
version = "0.5.0"
description = "Meeting transcription with speaker diarization using remote speaches API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [
    { name = "Egor Korobov", email = "koe.kaverna@gmail.com" }
]
keywords = [
    "transcription",
    "diarization",
    "speaker-recognition",
    "meeting",
    "audio",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx",
    "pyyaml",
    "tqdm",
    "colorama",
    "python-dotenv",
    "numpy",
    "scikit-learn",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "ruff",
    "mypy",
    "types-PyYAML",
    "types-tqdm",
    "types-colorama",
    "bandit[toml]",
    "mutmut",
]
web = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "python-multipart",
    "jinja2",
]

[project.urls]
Homepage = "https://github.com/koekaverna/meetscribe"
Repository = "https://github.com/koekaverna/meetscribe"
Issues = "https://github.com/koekaverna/meetscribe/issues"

[project.scripts]
meetscribe = "meetscribe.cli:main"
meetscribe-web = "meetscribe.web.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meetscribe"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "sklearn.*"
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101", "B404", "B603"]

[tool.mutmut]
paths_to_mutate = ["src/meetscribe/pipeline/", "src/meetscribe/database.py", "src/meetscribe/config.py", "src/meetscribe/team.py"]
tests_dir = ["tests/"]
also_copy = ["src/meetscribe/", "config.example.yaml"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
